gcc/testsuite/gdc.test/compilable/imports/test18651/c.d
module imports.test18651.c;
import imports.test18651.algorithm;

const var = sort(string[].init);
