gcc/testsuite/gdc.test/fail_compilation/imports/test64a.d
module imports;

const char[] file1 = "File1";

